crates/rye/tests/ui/compile-fail/sync-test-main.rs
fn main() {}

#[rye::test_main]
fn test_main() {}
